--- a/rain_prediction.ipynb
+++ b/rain_prediction.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"C:/Users/Dev kumar/Downloads/weatherAUS.csv\")"
+    "df=pd.read_csv(\"C:/Users/Ashish/Downloads/weatherAUS.csv\")"
    ]
   },
   {
